Bug fixed - spon section vertical alignment

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -195,6 +195,10 @@ footer {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 0;
+
+    img {
+      margin-bottom: 20px;
+    }
   }
 
   footer {
